examples/datalog/27_atomic_ops/21_insert_from_query.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_insert_query
Knowledge graph 'test_insert_query' created.
Switched to knowledge graph: test_insert_query
> .kg use test_insert_query
Switched to knowledge graph: test_insert_query
> +source[(1, 10), (2, 20), (3, 30)].
Inserted 3 fact(s) into 'source'.
> +doubled(Id, Val) :- source(Id, V), Val = V * 2.
Script error: Failed to register rule: Unsafe rule 'doubled': Head variable(s) Val not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
